--- a/web/index.html
+++ b/web/index.html
@@ -6,31 +6,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Murder Mystery Party</title>
+    <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="/eel.js"></script>
     <script>
+        function add_message(message, messageType) {
+            const full_chat = document.getElementById("fullChat")
+            const new_message = document.createElement("div")
+            const new_text = document.createElement("span")
+            new_message.classList += "message"
+
+            new_text.classList += "message-text " + messageType
+            full_chat.appendChild(new_message);
+            new_message.appendChild(new_text)
+            new_text.textContent = message
+
+            full_chat.scrollTop = full_chat.scrollHeight
+
+        }
+
         eel.expose(add_reply);
         function add_reply(new_reply) {
-            const full_chat = document.getElementById("fullChat")
-            const newContent = document.createTextNode(new_reply);
-            console.log("add_reply " + new_reply)
-            full_chat.appendChild(newContent)
+            add_message(new_reply, "message-reply")
+        }
+
+        eel.expose(add_question);
+        function add_question(new_question) {
+            add_message(new_question, "message-question")
         }
 
         function send_message() {
-            const new_message = document.getElementById("newMessage")
-            console.log("send_message " + new_message.value)
-            eel.send_message(1, new_message.value)
+            const new_question = document.getElementById("newMessage").value
+            document.getElementById("newMessage").value = ""
+            add_question(new_question)
+            eel.send_message(0, new_question)
         }
     </script>
 </head>
 
 <body>
     <h1>Hello Eel</h1>
-    <div style="height: 80%; overflow-y: scroll;" id="fullChat">
+    <div id="fullChat">
 
     </div>
     <input type="text" id="newMessage">
     <button onclick="send_message()">Send</button>
+    <button onclick="eel.fill()">fill</button>
 
 </body>
 
